# rstat

./: .gitignore  CLAUDE.md  Cargo.toml  implementasyon-plani.md  rstat-proje-baglam.md
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
crates/rstat-cli/: Cargo.toml
crates/rstat-cli/src/: cli.rs  io.rs  main.rs  render.rs
crates/rstat-cli/src/commands/: anova.rs  capability.rs  chisq.rs  ci.rs  mod.rs  spc.rs  summary.rs  ttest.rs
crates/rstat-cli/src/render/: anova.rs  capability.rs  chisq.rs  ci.rs  mod.rs  spc.rs  summary.rs  ttest.rs
crates/rstat-cli/tests/: cli_anova.rs  cli_capability.rs  cli_chisq.rs  cli_ci.rs  cli_license.rs  cli_spc.rs  cli_summary.rs  cli_ttest.rs
crates/rstat-cli/tests/fixtures/: anova_long.csv  anova_three_groups.csv  capability_data.csv  capability_expected.json  chisq_expected.json  chisq_gof.csv  chisq_independence_2x2.csv  chisq_independence_3x3.csv  chisq_independence_long.csv  ci_mean.csv  ci_proportion.csv  one_col.csv  spc_data.csv  spc_expected.json  two_col.csv  with_na.csv
crates/rstat-core/: Cargo.toml
crates/rstat-core/src/: error.rs  lib.rs  license.rs  result.rs
crates/rstat-core/src/capability/: mod.rs
crates/rstat-core/src/data/: summary.rs
crates/rstat-core/src/interval/: ci.rs
crates/rstat-core/src/spc/: mod.rs  rules.rs  xbar_r.rs
crates/rstat-core/src/tests_stat/: anova.rs  chisq.rs  mod.rs  ttest.rs
crates/rstat-keygen/: Cargo.toml
crates/rstat-keygen/src/: main.rs
crates/rstat-license/: Cargo.toml
crates/rstat-license/src/: lib.rs  verify.rs
docs/devops/: cloudflare_worker.js  homebrew_formula.rb  install.ps1  install.sh
docs/plans/: 01_product_strategy.md  02_technical_roadmap.md  03_devops_distribution.md
scripts/: crossvalidate_capability.py  crossvalidate_chisq.py  crossvalidate_ci.py  crossvalidate_fdist.py  crossvalidate_spc.py  crossvalidate_ttest.py
