[package]
name = "rstat-cli"
version = "0.1.0"
edition = "2024"
description = "Cross-platform statistics CLI — scipy.stats for the terminal"
repository = "https://github.com/ygtkula/rstat"
homepage = "https://rstat.dev"
license = "BUSL-1.1"
keywords = ["statistics", "cli", "ttest", "anova", "spc"]
categories = ["command-line-utilities", "science"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rstat-cli-v{ version }-{ target }.tar.gz"
bin-dir = "rstat-cli-v{ version }-{ target }/rstat-cli{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides]
"x86_64-pc-windows-msvc" = { pkg-fmt = "zip", bin-dir = "rstat-cli.exe" }

[dependencies]
rstat-core = { path = "../rstat-core" }
rstat-license = { path = "../rstat-license" }
clap = { version = "4", features = ["derive"] }
csv = "1"
serde_json = "1"
comfy-table = "7"
anyhow = "1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
