[package]
name = "rstat-keygen"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
