[package]
name = "rstat-license"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
